[package]
name = "game"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]
exclude = [
    "launchers/ios" # Special handling required
]

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
image = "0.25.0"
winit = "0.28.1"
bevy_pancam = { version = "0.8.0" }
rand = "0.8.5"
bevy_asset_loader = "0.16.0"
