[package]
name = "ios-launcher"
version = "0.1.0"
edition = "2021"
description = "a description is necessary for an iOS app"

[package.metadata.bundle]
name = "ios-launcher"
identifier = "com.example.ios-launcher"
icon = ["static/icon.png"]
resources = ["assets/", "static/"]

[dependencies]
game = { path = "../.." }
bevy = "0.10.1"
image = "0.25.0"
winit = "0.27.5"
